[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/nav_fg.png" type="Texture" id=1]
[ext_resource path="res://Assets/nav_bg.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Nav.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.7349

[sub_resource type="CircleShape2D" id=2]
radius = 10.785

[sub_resource type="CircleShape2D" id=3]
radius = 10.9894

[sub_resource type="CircleShape2D" id=4]
radius = 12.136

[sub_resource type="CircleShape2D" id=5]
radius = 12.1817

[node name="Nav" type="Node2D"]
position = Vector2( 60.2256, 57.7162 )
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Thumb" type="KinematicBody2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Thumb"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Thumb"]
texture = ExtResource( 1 )

[node name="Up" type="Area2D" parent="."]
position = Vector2( -0.291992, -35.3307 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
position = Vector2( 0.291992, -0.875961 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 39.7105, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 3 )

[node name="Down" type="Area2D" parent="."]
position = Vector2( 1.16797, 37.9586 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
shape = SubResource( 4 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -40.8784, 2.33591 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 5 )
[connection signal="input_event" from="Thumb" to="." method="_on_Thumb_input_event"]
[connection signal="body_entered" from="Up" to="." method="_on_Up_body_entered"]
[connection signal="body_exited" from="Up" to="." method="_on_Body_exited"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_exited" from="Right" to="." method="_on_Body_exited"]
[connection signal="body_entered" from="Down" to="." method="_on_Down_body_entered"]
[connection signal="body_exited" from="Down" to="." method="_on_Body_exited"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_Body_exited"]
